# native-ffmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/native_ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libs/armeabi-v7a/ffmpeg/include/: foo.h
app/src/main/cpp/libs/armeabi-v7a/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/libs/armeabi-v7a/ffmpeg/include/libavformat/: avformat.h
app/src/main/cpp/libs/armeabi-v7a/ffmpeg/include/libavutil/: common.h
app/src/main/java/com/example/native_ffmpeg/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/native_ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
